--- a/public/index.html
+++ b/public/index.html
@@ -12,8 +12,8 @@
 
 
 
-<meta name="author" content="g1eny0ung" />
-<meta name="description" content="g1eny0ung 的生活记录～" />
+<meta name="author" content="kUSHAL0601" />
+<meta name="description" content="Kushal's Blog" />
 
 
 
@@ -23,7 +23,7 @@
 
 
 <meta property="og:title" content="" />
-<meta property="og:description" content="g1eny0ung 的生活记录～" />
+<meta property="og:description" content="Kushal's Blog" />
 <meta property="og:type" content="website" />
 <meta property="og:url" content="/" /><meta property="og:image" content="me/background.jpg"/>
 
@@ -34,7 +34,7 @@
 <meta name="twitter:image" content="me/background.jpg"/>
 
 <meta name="twitter:title" content=""/>
-<meta name="twitter:description" content="g1eny0ung 的生活记录～"/>
+<meta name="twitter:description" content="Kushal's Blog"/>
 
 
 <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/semantic-ui@2.4.2/dist/semantic.min.css">
@@ -101,7 +101,7 @@
     <i class="large link sync icon dream-flip-toggle" title="Flip it!"></i>
   </div>
   <div class="item">
-    <i class="large link home icon" title="Home" onclick="window.location.href = ''"></i>
+    <i class="large link home icon" title="Home" onclick="window.location.href = '/'"></i>
   </div>
   
   <div class="item">
