deploy: fb5b9ca0b2d60f780d1b22549e7c49c86c3ef54e

--- a/index.html
+++ b/index.html
@@ -69,6 +69,12 @@ backend
 <a class="ui label" href=/tags/covid19/ title=covid19>
 covid19
 </a>
+<a class="ui label" href=/tags/deepfake/ title=deepfake>
+deepfake
+</a>
+<a class="ui label" href=/tags/education/ title=education>
+education
+</a>
 <a class="ui label" href=/tags/failure/ title=failure>
 failure
 </a>
@@ -82,6 +88,31 @@ sockets
 </div>
 </header>
 <div class="ui relaxed grid dream-grid">
+<div class="sixteen wide mobile eight wide tablet eight wide computer four wide large screen four wide widescreen column dream-column">
+<article class="ui attached segment card dream-card">
+<a class=image href=https://kushal0601.github.io/posts/fakeducation/>
+<img src=/img/original.jpg alt="FAKEducation -  A Deep Fake approach to Education">
+</a>
+<div class=content>
+<h2 class="ui medium header">
+<a href=/posts/fakeducation/>FAKEducation - A Deep Fake approach to Education</a>
+</h2>
+<div class=meta>
+<p class=date>
+Monday, Aug 2, 2021
+</p>
+</div>
+<div class=description>
+<p><strong>My Journey on how I built a product using Deep Fakes which ended up as a runner up at SigmaHacks3</strong></p>
+</div>
+</div>
+<div class="extra content">
+<div class=author><img class="ui avatar image" src=/img/me.png alt=avatar>MajAK</div>
+<div class=reading-time>
+<i class="clock icon"></i>7 minutes read</div>
+</div>
+</article>
+</div>
 <div class="sixteen wide mobile eight wide tablet eight wide computer four wide large screen four wide widescreen column dream-column">
 <article class="ui attached segment card dream-card">
 <a class=image href=https://kushal0601.github.io/posts/socket-conn/>
