deploy: 1cf2dfe1d225533f9d7761acb63a6e98b11bf966

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 <link href=/favicon.ico rel="shortcut icon" type=image/x-icon>
 <meta name=author content="Kushal">
 <meta name=description content="Kushal">
-<meta name=generator content="Hugo 0.86.1">
+<meta name=generator content="Hugo 0.87.0">
 <link rel=canonical href=https://kushal0601.github.io/>
 <meta property="og:title" content="MajAK">
 <meta property="og:description" content="Kushal">
@@ -63,6 +63,9 @@
 </a>
 </article>
 <div class=dream-tags>
+<a class="ui label" href=/tags/anniversary/ title=anniversary>
+anniversary
+</a>
 <a class="ui label" href=/tags/backend/ title=backend>
 backend
 </a>
@@ -78,6 +81,9 @@ education
 <a class="ui label" href=/tags/failure/ title=failure>
 failure
 </a>
+<a class="ui label" href=/tags/microsoft/ title=microsoft>
+microsoft
+</a>
 <a class="ui label" href=/tags/notification/ title=notification>
 notification
 </a>
@@ -88,6 +94,31 @@ sockets
 </div>
 </header>
 <div class="ui relaxed grid dream-grid">
+<div class="sixteen wide mobile eight wide tablet eight wide computer four wide large screen four wide widescreen column dream-column">
+<article class="ui attached segment card dream-card">
+<a class=image href=https://kushal0601.github.io/posts/microsoft1y/>
+<img src=/img/microsoft_b1.png alt="One year at Microsoft">
+</a>
+<div class=content>
+<h2 class="ui medium header">
+<a href=/posts/microsoft1y/>One year at Microsoft</a>
+</h2>
+<div class=meta>
+<p class=date>
+Monday, Aug 30, 2021
+</p>
+</div>
+<div class=description>
+<p><strong>A summary of my short stint of a year at Microsoft as a SDE and my experience from back in college to the last day of work!</strong></p>
+</div>
+</div>
+<div class="extra content">
+<div class=author><img class="ui avatar image" src=/img/me.png alt=avatar>MajAK</div>
+<div class=reading-time>
+<i class="clock icon"></i>11 minutes read</div>
+</div>
+</article>
+</div>
 <div class="sixteen wide mobile eight wide tablet eight wide computer four wide large screen four wide widescreen column dream-column">
 <article class="ui attached segment card dream-card">
 <a class=image href=https://kushal0601.github.io/posts/fakeducation/>
