deploy: 41784abd22c0d884ff7ae4773c4feeeb799f9e0a

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 <link href=/favicon.ico rel="shortcut icon" type=image/x-icon>
 <meta name=author content="Kushal">
 <meta name=description content="Kushal">
-<meta name=generator content="Hugo 0.89.3">
+<meta name=generator content="Hugo 0.89.4">
 <link rel=canonical href=https://kushal0601.github.io/>
 <meta property="og:title" content="MajAK">
 <meta property="og:description" content="Kushal">
@@ -81,11 +81,20 @@ education
 <a class="ui label" href=/tags/failure/ title=failure>
 failure
 </a>
+<a class="ui label" href=/tags/interview/ title=interview>
+interview
+</a>
 <a class="ui label" href=/tags/microsoft/ title=microsoft>
 microsoft
 </a>
 <a class="ui label" href=/tags/notification/ title=notification>
 notification
+</a>
+<a class="ui label" href=/tags/predoc/ title=predoc>
+predoc
+</a>
+<a class="ui label" href=/tags/process/ title=process>
+process
 </a>
 <a class="ui label" href=/tags/sockets/ title=sockets>
 sockets
@@ -94,6 +103,31 @@ sockets
 </div>
 </header>
 <div class="ui relaxed grid dream-grid">
+<div class="sixteen wide mobile eight wide tablet eight wide computer four wide large screen four wide widescreen column dream-column">
+<article class="ui attached segment card dream-card">
+<a class=image href=https://kushal0601.github.io/posts/predoc-at-google/>
+<img src=/img/google-cover.png alt="My Journey to PreDoc at Google">
+</a>
+<div class=content>
+<h2 class="ui medium header">
+<a href=/posts/predoc-at-google/>My Journey to PreDoc at Google</a>
+</h2>
+<div class=meta>
+<p class=date>
+Thursday, Dec 2, 2021
+</p>
+</div>
+<div class=description>
+<p><strong>My interview journey which led to an offer to join Google as a Pre-Doctoral Researcher.</strong></p>
+</div>
+</div>
+<div class="extra content">
+<div class=author><img class="ui avatar image" src=/img/me.png alt=avatar>MajAK</div>
+<div class=reading-time>
+<i class="clock icon"></i>8 minutes read</div>
+</div>
+</article>
+</div>
 <div class="sixteen wide mobile eight wide tablet eight wide computer four wide large screen four wide widescreen column dream-column">
 <article class="ui attached segment card dream-card">
 <a class=image href=https://kushal0601.github.io/posts/microsoft1y/>
